# ai-dial-rag-eval

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  Makefile  README.md  SECURITY.md  conftest.py  log_parser.py  noxfile.py  pyproject.toml  trivy.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: pr.yml  release.yml
docs/: generation_details.md  rag_eval_details.md  retrieval_details.md  stability_results.ipynb  state.md  time_results.ipynb
examples/: generation_low_level_metrics.ipynb  generation_metrics.ipynb  metrics.ipynb  run_to_check.ipynb
examples/example_parquets/: answer.parquet  ground_truth.parquet  metrics.parquet  metrics.parquet.metadata.json
libs/log_parser/: log_parser.py
libs/rag_eval/: .flake8  collect_answers.py  noxfile.py  pyproject.toml
libs/rag_eval/src/rag_eval/: app.py  collect_answers.py  data.py  evaluate.py  extract_facts.py  highlight.py  match_facts.py  metrics.py
libs/rag_eval/src/rag_eval/pages/: 1_view_data.py  2_view_pdf.py  3_evaluation.py  4_comparison.py  5_pair_comparison.py  6_questions.py  7_collect_answers.py  8_ground_truth.py
libs/rag_eval/tests/: test_app.py  test_imports.py
libs/rag_eval_metrics/: .flake8  noxfile.py  pyproject.toml
libs/rag_eval_metrics/src/rag_eval_metrics/: dataset.py  evaluate.py  metrics.py  types.py  utils.py
libs/rag_eval_metrics/src/rag_eval_metrics/dataframe/: match_facts.py  metrics.py
libs/rag_eval_metrics/src/rag_eval_metrics/facts/: citation.py  match_facts.py
libs/rag_eval_metrics/tests/: test_citation_facts.py  test_dataframe.py  test_dataset.py  test_metrics.py
libs/rag_eval_metrics/tests/data/: answers_2.parquet  answers_3.parquet  data.parquet  ground_truth.parquet  ground_truth_3.parquet
src/aidial_rag_eval/: evaluate.py  metrics.py  types.py
src/aidial_rag_eval/dataframe/: match_facts.py  merge.py  metrics.py
src/aidial_rag_eval/facts/: citation.py  exact.py  match_str_facts.py
src/aidial_rag_eval/generation/: inference.py  metric_binds.py  refusal.py  types.py
src/aidial_rag_eval/generation/llm_models/: converter.py  inference_scorer.py  lambdas.py  refusal_detector.py
src/aidial_rag_eval/generation/models/converters/: decontextualization_template.py
src/aidial_rag_eval/generation/models/inference_scorers/: base_inference_scorer.py  inference_template.py  llm_inference_scorer.py
src/aidial_rag_eval/generation/prompts/: __init__.py
src/aidial_rag_eval/generation/prompts/templates/: nli_template.py  no_pronouns_template.py  refusal_template.py
src/aidial_rag_eval/generation/utils/: segmented_text.py
src/rag_eval_metrics/: metrics.py
src/rag_eval_metrics/dataframe/: metrics.py
src/rag_eval_metrics/facts/: citation.py
tests/: test_citation_facts.py  test_dataframe.py  test_dataset.py  test_exact_matcher.py  test_metrics.py  test_retrieval_report.py  test_segment_text.py
tests/data/: answers.parquet  answers_1.parquet  answers_inference_1.parquet  ground_truth.parquet  ground_truth.parquet.metadata.json  ground_truth_1.parquet  ground_truth_2.parquet  ground_truth_3.parquet  ground_truth_inference_1.parquet  ground_truth_inference_1.parquet.metadata.json
tests/data/cache/: cache_gemini-1.5-flash-001.db  cache_gemini-1.5-flash-002.db
tests/llm_tests/: conftest.py  test_generation_metrics.py  test_generation_metrics_dataframe.py  test_generation_metrics_dataset.py  test_generation_report.py
