[tool.poetry]
name = "rag-eval"
version = "0.1.0"
description = ""
authors = ["Aliaksei Labanau <aliaksei_labanau@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
streamlit = "^1.32.2"
streamlit-extras = "^0.4.0"
fsspec = "^2024.3.1"
streamlit-aggrid = "^1.0.1"
openpyxl = "^3.1.2"
stqdm = "^0.0.5"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
rag-eval-metrics = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
rag-eval-metrics = { path = "../rag_eval_metrics", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
