[tool.poetry]
name = "rag-eval-metrics"
version = "0.1.0"
description = ""
authors = ["Aliaksei Labanau <aliaksei_labanau@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pyright = "^1.1.360"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
flake8-isort = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
